# GalaxCLang

./: .gitignore  Cargo.toml  README.md  error_test.gxc  galaxc_association.reg  test_diag.gxc
crates/galaxc/: Cargo.toml
crates/galaxc-cli/: Cargo.toml
crates/galaxc-cli/src/: main.rs
crates/galaxc-dbg/: Cargo.toml
crates/galaxc-dbg/src/: main.rs
crates/galaxc/src/: lib.rs
crates/galaxc/src/ast/: mod.rs  nodes.rs  visit.rs
crates/galaxc/src/checker/: check.rs  env.rs  mod.rs
crates/galaxc/src/codegen/: mod.rs
crates/galaxc/src/diagnostics/: mod.rs  report.rs  span.rs
crates/galaxc/src/ir/: mod.rs
crates/galaxc/src/lexer/: mod.rs  scanner.rs  token.rs
crates/galaxc/src/parser/: core.rs  decl.rs  expr.rs  mod.rs  pattern.rs  stmt.rs  types.rs
crates/galaxc/src/types/: mod.rs  types.rs
crates/galaxc/tests/: checker_tests.rs
editors/: README.md
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/snippets/: galaxc.json
editors/vscode/src/: extension.js
editors/vscode/syntaxes/: galaxc.tmLanguage.json
examples/: abilities.gxc  data_model.gxc  error_handling.gxc  hello.gxc  hello_simple.gxc  mission_loop.gxc  no_orbit.gxc  orbit_calculator.gxc  tasking.gxc  test.gxc
stdlib/: collections.gxc  core.gxc  io.gxc  math.gxc  telemetry.gxc  time.gxc
